Updated project features and dashboards